--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html lang="en-US" data-tag-assistant-prod-present="pending:1759684610347"><head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L1N71GXGDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L1N71GXGDK');
+</script>
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
