--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-L1N71GXGDK');
+  gtag('config', 'G-L1N71GXGDK', { 'debug_mode':true });
 </script>
 	
     <meta charset="UTF-8">
