--- a/index.html
+++ b/index.html
@@ -414,6 +414,10 @@ var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T98VT68T"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+
+<a href="https://stalwart-khapse-89630f.netlify.app/">Visit Google</a>
+
 	
 	<div id="page" class="site">
 	<div id="site-header-minimized"></div>			<header id="site-header" class="site-header header-bottom-no-sticky site-header__border">
