--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html lang="en-US" data-tag-assistant-prod-present="pending:1759684610347"><head>
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T98VT68T');</script>
-<!-- End Google Tag Manager -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L1N71GXGDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L1N71GXGDK');
+</script>
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -410,10 +412,8 @@ var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax
 <body data-rsssl="1" class="home wp-singular page-template page-template-elementor_theme page page-id-24531 wp-custom-logo wp-embed-responsive wp-theme-razzi theme-razzi woocommerce-js woo-variation-swatches wvs-behavior-blur wvs-theme-razzi wvs-show-label wvs-tooltip full-content header-default header-v1 header-sticky woocommerce-active product-qty-number elementor-default elementor-kit-24000 elementor-page elementor-page-24531 e--ua-blink e--ua-chrome e--ua-webkit" data-elementor-device-mode="mobile">
 
 
-	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T98VT68T"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
+	
 
 
 <a href="https://stalwart-khapse-89630f.netlify.app/">Visit Google</a>
