--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-<html lang="en-US" data-tag-assistant-prod-present="pending:1759684610347"><head>
+<html lang="en-US" data-tag-assistant-prod-present="pending:1759684610347">
+	
+	<head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17599548840"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17599548840');
+</script>
+
+	
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L1N71GXGDK"></script>
 <script>
